update image scroll

--- a/src/styles/Project.sass
+++ b/src/styles/Project.sass
@@ -1,4 +1,4 @@
-.p
+p
    margin: 0vh 4vh 0vh 4vh
 
 // SASS variable for media query breakpoint
@@ -10,7 +10,6 @@ ul
   margin: 0
   list-style-type: none
 
-
 // Fix for jumping arrows
 .carousel-container 
   display: flex
@@ -18,10 +17,8 @@ ul
   justify-content: center
   min-height: 210px
 
-
 .carousel 
   position: relative
-
 
 // Carousel slides
 .carousel__slide 
@@ -39,7 +36,6 @@ ul
 
   &--active 
     display: block
-
 
 // Carousel arrows
 .carousel__arrow 
@@ -67,8 +63,6 @@ ul
   &--right 
     right: 32px
   
-
-
 // Carousel indicators
 .carousel__indicators 
   display: flex
@@ -80,8 +74,6 @@ ul
     &:nth-of-type(n + 2) 
       margin-left: 9px
     
-  
-
 
 .carousel__indicator 
   display: block
@@ -101,7 +93,12 @@ ul
     &:hover 
       opacity: .75
    
-  
+.mob-img
+  width: 30vh
+  height: 55vh
+.desk-img
+  width: 90vh
+  height: 55vh
 
     
 
