--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -1,5 +1,28 @@
+//DEFINE MEDIA QUERIES//
+$breakpoints: ( 'small':  ( min-width:  100px ),'medium': ( min-width:  750px ),'large':  ( min-width: 1200px ))!default
+@mixin respond-to($breakpoint) 
+  // If the key exists in the map
+  @if map-has-key($breakpoints, $breakpoint) 
+    // Prints a media query based on the value
+    @media #{inspect(map-get($breakpoints, $breakpoint))} 
+      @content
+    
+  // If the key doesn't exist in the map
+  @else 
+    @warn "Unfortunately, no value could be retrieved from `#{$breakpoint}`. " + "Available breakpoints are: #{map-keys($breakpoints)}."
+// /*EXAMPLE USE (remember to import)
+//  @import './app.sass'
+//     .header
+//     @include respond-to('small')
+//         background-color: black
+//     @include respond-to('medium')
+//         background-color: red
+//     @include respond-to('large')
+//         background-color: blue
+// */
 $colors: #592941, #498467, #52B788, #B2D3A8, #EDE5A6
 $repeat: 4
+
 @for $i from 1 through $repeat 
     .container:nth-child(#{length($colors)}n+#{$i}) 
         background: nth($colors, $i)
@@ -7,3 +30,8 @@ $repeat: 4
     height: 85vh
 .landing
     padding-top: 15vh
+    position: relative
+.avatar
+    position: absolute
+    bottom: 0
+    height: 40vh
