resize desk-img

--- a/src/styles/Project.sass
+++ b/src/styles/Project.sass
@@ -22,17 +22,13 @@ ul
 
 // Carousel slides
 .carousel__slide 
-  margin-right: auto
-  margin-left: auto
+  margin-right: inherit
+  margin-left: inherit
   display: none
-  max-width: 900px
+  width: 100%
   list-style-type: none
   text-align: center
 
-  @media (max-width: 991px) 
-    padding-right: 60px
-    padding-left: 60px
-  
 
   &--active 
     display: block
@@ -97,8 +93,8 @@ ul
   width: 30vh
   height: 55vh
 .desk-img
-  width: 90vh
-  height: 55vh
+  width: inherit
+  height: auto
 
     
 
