fix project background

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -32,6 +32,9 @@ $repeat: 4
 .landing
     padding-top: 15vh
     position: relative
+.projects
+    height: auto
+    
 .avatar
     position: absolute
     bottom: 0
