style contact form

--- a/src/styles/Project.sass
+++ b/src/styles/Project.sass
@@ -26,7 +26,6 @@ ul
   margin-left: inherit
   display: none
   width: 100%
-  list-style-type: none
   text-align: center
 
 
@@ -95,6 +94,8 @@ ul
 .desk-img
   width: inherit
   height: auto
+.center
+  text-align: center
 
     
 
