--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -1,17 +1,28 @@
 .header
     background-color: black
     color: white
-    height: 15vh
+    height: 12vh
     width: 100%
     position: fixed
     z-index: 3
+    display: flex
     div
-        padding-left: 1.5vh
+        padding-left: 1vh
 .header-name
     font-size: 3vh
-    padding-top: 3vh
+    padding-top: 2vh
 .header-posit
     font-size: 2vh
-    padding-top: 2vh
+    padding-top: 1vh
     padding-bottom: 3vh
+nav
+    float: right
+    margin-left: 0%
+nav a
+    float: left
+    color: #f2f2f2
+    text-align: center
+    padding: 7vh 1.5vh 
+    text-decoration: none
+    font-size: 2vh
     
