update header color and add more fonts

--- a/src/styles/Project.sass
+++ b/src/styles/Project.sass
@@ -1,5 +1,13 @@
+.mob-img
+  width: 30vh
+  height: 55vh
+.desk-img
+  width: inherit
+  height: auto
+.center
+  text-align: center
 p
-   margin: 0vh 4vh 0vh 4vh
+  margin: 0vh 4vh 0vh 4vh
 
 // SASS variable for media query breakpoint
 $breakpoint-desktop: 992px
@@ -10,6 +18,8 @@ ul
   margin: 0
   list-style-type: none
 
+
+//***STYLE SCREENSHOT CAROUSEL***//
 // Fix for jumping arrows
 .carousel-container 
   display: flex
@@ -67,8 +77,7 @@ ul
 
   li 
     &:nth-of-type(n + 2) 
-      margin-left: 9px
-    
+      margin-left: 9px 
 
 .carousel__indicator 
   display: block
@@ -87,15 +96,6 @@ ul
     &
     &:hover 
       opacity: .75
-   
-.mob-img
-  width: 30vh
-  height: 55vh
-.desk-img
-  width: inherit
-  height: auto
-.center
-  text-align: center
 
     
 
