--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -1,5 +1,7 @@
+@import ./app
 .header
-    background-color: black
+    @include myriad()
+    background-color: #181026
     color: white
     height: 12vh
     width: 100%
