style filter buttons

--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -1,7 +1,7 @@
 @import ./app
 .header
     @include myriad()
-    background-color: #181026
+    background-color: $navy
     color: white
     height: 12vh
     width: 100%
