--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -20,6 +20,7 @@ $breakpoints: ( 'small':  ( min-width:  100px ),'medium': ( min-width:  750px ),
   @else 
     @warn "Unfortunately, no value could be retrieved from `#{$breakpoint}`. " + "Available breakpoints are: #{map-keys($breakpoints)}."
 $colors: #592941, #498467, #52B788, #B2D3A8, #EDE5A6
+$navy: #181026
 $repeat: 4
 //LOOP BACKGROUND COLORS
 @for $i from 1 through $repeat 
@@ -87,5 +88,22 @@ App
     opacity: 0.5
 h1, h2, h3
   @include myriad()
+.filterBtn
+  @include lato()
+  background-color: $navy
+  color: white
+  font-size: 1.5vh
+  margin: .5vh 0vh
+  @include respond-to('small')
+    height: 23px
+    width: 100px
+  @include respond-to('medium')
+    width: 18vh
+    height: 25px
+.filterBtn:hover
+  border-color: red
+.filters
+  text-align: center
   
+
   
