--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -15,16 +15,21 @@
     padding-top: 2vh
 .header-posit
     font-size: 2vh
-    padding-top: 1vh
+    padding-top: 1.9vh
     padding-bottom: 3vh
 nav
+    position: absolute
+    right: 0
     float: right
-    margin-left: 0%
+
+    
 nav a
+
     float: left
     color: #f2f2f2
-    text-align: center
-    padding: 7vh .2vh 
     text-decoration: none
     font-size: 2vh
-    
+    @include respond-to('small')
+        text-align: center
+        padding: 7.5vh 1vh 
+    @include respond-to('medium')
