project button anchor switch

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -96,7 +96,7 @@ h1, h2, h3
   margin: .5vh 0vh
   @include respond-to('small')
     height: 23px
-    width: 100px
+    width: 15vh
   @include respond-to('medium')
     width: 18vh
     height: 25px
