--- a/src/styles/contact.sass
+++ b/src/styles/contact.sass
@@ -26,7 +26,7 @@ iframe
         height: $contactSmlWidth/1.5
     @include respond-to('medium')
         width: $contactMedWidth
-        height: $contactMedWidth
+        height: $contactSmlWidth
     @include respond-to('large')
         width: $contactLrgWidth
         height: $contactMedWidth
