add margin to about me

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -51,6 +51,7 @@ $repeat: 4
   @include respond-to('small')
     height: auto
   .bio-text
+    margin: 0vh 10vh 
     text-align: center
     padding: 1vh
      
