--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -13,7 +13,7 @@
   font-style: italic
 
 //DEFINE MEDIA QUERIES//
-$breakpoints: ( 'xx-small': (max-width: 375px), 'small':  ( min-width:  375px ),'medium': ( min-width:  750px ),'large':  ( min-width: 1200px ))!default
+$breakpoints: ( 'xsmall': (max-width: 375px), 'small':  ( min-width:  375px ),'medium': ( min-width:  750px ),'large':  ( min-width: 1200px ))!default
 @mixin respond-to($breakpoint) 
   // If the key exists in the map
   @if map-has-key($breakpoints, $breakpoint) 
@@ -44,12 +44,7 @@ $repeat: 4
 .projects
   height: auto
 .bio
-  @include respond-to('xx-small')
-    div
-      p
-        font-size: 2vh
-  @include respond-to('small')
-    height: auto
+  height: auto
   .bio-text
     margin: 0vh 10vh 
     text-align: center
