--- a/src/styles/contact.sass
+++ b/src/styles/contact.sass
@@ -10,6 +10,8 @@ input, textarea
     border: 0
     padding: 7px
     border-bottom: 1px solid #ccc
+    @include respond-to('xsmall')
+    
 
 .submitBtn
     padding: 5px
